# libbacktrace-python

./: .gitignore  .gitmodules  LICENSE  README.md  THIRD_PARTY_NOTICES.txt  meson.build  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/libbacktrace/: __init__.py  _libbacktrace.c  backtrace-supported.h  config.h
tests/: test_libbacktrace.py
